<resources>

    <string name="app_name">WannaCook</string>

    <!-- Tools -->
    <string name="toolsTiny">Lorem</string>
    <string name="toolsSmall">Lorem ipsum</string>
    <string name="toolsRegular">Lorem ipsum dolor sit amet</string>
    <string name="toolsMedium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="toolsBig">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- Commons -->
    <string name="close">Fermer</string>
    <string name="quit">Quitter</string>
    <string name="back">Retour</string>
    <string name="next">Suivant</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>

    <!-- Units -->
    <string name="kg">Kilogramme(s)</string>
    <string name="g">Gramme(s)</string>
    <string name="mg">Milligramme(s)</string>
    <string name="l">Litre(s)</string>
    <string name="cl">Centilitre(s)</string>
    <string name="sp">Cuillère(s)</string>
    <string name="unitNone">Aucune</string>

    <string name="connector">de</string>

    <!-- Level -->
    <string name="easy">Facile</string>
    <string name="medium">Moyen</string>
    <string name="hard">Difficile</string>

    <!-- Persons -->
    <string name="peopleFor">Pour</string>
    <plurals name="peopleCount">
        <item quantity="zero">personne</item>
        <item quantity="one">personne</item>
        <item quantity="other">personnes</item>
    </plurals>

    <!-- SharedElements -->
    <string name="sharedRecipeImage">recipeImage</string>

    <!-- Recipe -->
    <string name="recipeGo">C\'est parti !</string>
    <string name="recipeIngredients">Ingrédients</string>
    <string name="recipeSteps">Préparation</string>
    <string name="recipeStepNumber">%1$d.</string>

    <!-- Edit -->
    <string name="editNew">Créer une recette</string>
    <string name="editOld">Éditer une recette</string>

    <string name="editTitleHeader">Donnez un titre à votre recette.</string>
    <string name="editTitleMinSize">5 char. min</string>
    <string name="editTitleColorHeader">Choisissez une couleur : </string>

    <string name="editTagHeader">Ajoutez-lui des tags.\n(Au moins un)</string>
    <string name="editTagAdd">Ajouter</string>
    <string name="editTagSearchHint">Rechercher des tags</string>
    <string name="editTagSearchMinSize">3 char. min</string>

    <string name="editIngredientHeader">C\'est parti pour les ingrédients !</string>
    <string name="editIngredientHowMany">Pour combien de personnes ?</string>
    <string name="editIngredientAdd">Ajouter un ingrédient</string>

    <!-- Ingredient -->
    <string name="ingredientNew">Nouvel ingrédient</string>
    <string name="ingredientUpdate">Édition de l\'ingrédient</string>
    <string name="ingredientName">Nom de l\'ingrédient</string>
    <string name="ingredientUnit">Unité : </string>
    <string name="ingredientQuantity">Quantité : </string>
    <plurals name="ingredientQuantityCount">
        <item quantity="one">Indiquez la quantité pour %1$d personne.</item>
        <item quantity="other">Indiquez la quantité pour %1$d personnes.</item>
    </plurals>
    <string name="ingredientValidate">@string/validate</string>
    <string name="ingredientQuitTitle">Voulez-vous vraiment quitter ?</string>
    <string name="ingredientQuitMessage">Vos changements ne seront pas sauvegardés.</string>
    <string name="ingredientQuitPositive">@string/quit</string>
    <string name="ingredientQuitNegative">@string/cancel</string>

</resources>
